welcome.lessons.welcome.variables.Variables.scala.error
Variables:9: error: '(' expected but identifier found.
while Pas!=0 {
      ^Variables:15: error: illegal start of simple expression
	}
        ^